// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for type: alphabetically 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-ordered-grid-column,1.5rem) !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-ordered-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  justify-self: flex-end !important;
  white-space: nowrap !important;
}"
`;

exports[`getComponentCss() > should return correct css for type: alphabetically 2`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-ordered-grid-column,1.5rem) !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-ordered-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  justify-self: flex-end !important;
  white-space: nowrap !important;
}"
`;

exports[`getComponentCss() > should return correct css for type: numbered 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-ordered-grid-column,1.5rem) !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-ordered-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  justify-self: flex-end !important;
  white-space: nowrap !important;
}"
`;

exports[`getComponentCss() > should return correct css for type: numbered 2`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-ordered-grid-column,1.5rem) !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-ordered-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  justify-self: flex-end !important;
  white-space: nowrap !important;
}"
`;

exports[`getComponentCss() > should return correct css for type: unordered 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-unordered-grid-column,.375rem) !important;
}
::slotted(*)::before {
  content: var(--p-internal-text-list-unordered-pseudo-content,'•') !important;
}"
`;

exports[`getComponentCss() > should return correct css for type: unordered 2`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 0;
  list-style-type: none;
  color: var(--p-color-primary);
}
::slotted(*) {
  --p-internal-text-list-padding-top: var(--p-spacing-static-xs) !important;
  --p-internal-text-list-padding-bottom: var(--p-spacing-static-md) !important;
  --p-internal-text-list-pseudo-space: var(--p-internal-text-list-unordered-grid-column,.375rem) !important;
}
::slotted(*)::before {
  content: var(--p-internal-text-list-unordered-pseudo-content,'•') !important;
}"
`;
